# rules_js-1p-peer-dep

./: .bazelignore  .bazelrc  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: BUILD.bazel  app.tsx  package.json  tsconfig.json
component-lib/: BUILD.bazel  component.tsx  package.json
